nvh265sldec: Empty RefPicSetStCurrBefore error after frame loss ; width=752, height=480
@seungha.yang I've cloned today gstreamer with your fix commit c91d72e6 . But I still have errors after packet loss.
The problem happens only if I use nvh265sldec and width=752, height=480
If I use avdec_h265, no problem. If I don't specify width=752, height=480 . no problem.
FYI , I'm also using https://github.com/EricssonResearch/scream/tree/master/gstscream .
Sender :
Pipeline: videotestsrc is-live=true pattern=snow ! videoconvertscale ! video/x-raw, format=NV12, framerate=20/1, width=752, height=480 ! nvh265enc name=video zerolatency=true preset=low
-latency-hq rc-mode=cbr-ld-hq gop-size=-1 bitrate=500 ! queue max-size-buffers=2 max-size-bytes=0 max-size-time=0 ! rtph265pay ssrc=1 config-interval=-1 ! queue max-size-buffers=2 max-siz
e-bytes=0 max-size-time=0 ! screamtx name="screamtx" params=" -forceidr -ect 1 -initrate 500 -minrate 500 -maxrate 40000 " ! udpsink host=192.168.1.10 port=30112 sync=false rtpbin n
ame=r udpsrc port=30112 address=192.168.1.25 ! queue ! screamtx.rtcp_sink screamtx.rtcp_src ! r.recv_rtcp_sink_0
Receiver:
ECVPIPELINE=rtpbin latency=10 name=rtpbin udpsrc port=30112 address=192.168.1.10 ! queue max-size-buffers=2 max-size-bytes=0 max-size-time=0 ! screamrx name=screamrx screamrx.src ! appli
cation/x-rtp, media=video, encoding-name=H265, clock-rate=90000 ! rtpbin.recv_rtp_sink_0 rtpbin. ! rtph265depay ! h265parse ! nvh265sldec name=videodecoder ! queue max-size-buffers=2 max-s
ize-bytes=0 max-size-time=0 ! glupload ! glcolorconvert ! fpsdisplaysink video-sink="glimagesinkelement" rtpbin.send_rtcp_src_0 ! funnel name=f ! queue max-size-buffers=2 max-size-bytes=0
max-size-time=0 ! udpsink host=192.168.1.25 port=30112 sync=false async=false screamrx.rtcp_src ! f.
(scream_receiver:582751): GStreamer-WARNING **: 11:07:09.269: ../subprojects/gstreamer/gst/gstpad.c:5352:store_sticky_event:<f:src> Sticky event misordering, got 'segment' before 'caps'
(scream_receiver:582751): GStreamer-WARNING **: 11:07:09.269: ../subprojects/gstreamer/gst/gstpad.c:5352:store_sticky_event:queue2:sink Sticky event misordering, got 'segment' before 'ca
ps'
(scream_receiver:582751): GStreamer-WARNING **: 11:07:09.269: ../subprojects/gstreamer/gst/gstpad.c:5352:store_sticky_event:queue2:src Sticky event misordering, got 'segment' before 'cap
s'
(scream_receiver:582751): GStreamer-WARNING **: 11:07:09.269: ../subprojects/gstreamer/gst/gstpad.c:5352:store_sticky_event:udpsink0:sink Sticky event misordering, got 'segment' before '
caps'
0:02:09.431902539 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.455129067 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.471591765 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.491998034 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.561039462 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.599110876 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.681386484 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.695690427 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.729403642 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.781125201 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
0:02:09.833923003 582751 0x7f66340090c0 ERROR nvh265dec gstnvh265dec.c:842:gst_nv_h265_dec_start_picture: Empty RefPicSetStCurrBefore[0]
error from Some("/GstPipeline:pipeline0/GstNvH265SLDec:videodecoder"): Failed to decode data (Some("../subprojects/gst-plugins-bad/gst-libs/gst/codecs/gsth265decoder.c(1987): gst_h265_\
decoder_handle_frame (): /GstPipeline:pipeline0/GstNvH265SLDec:videodecoder"))